--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: my-java-app:latest
+        tags: saikishore0501/my-java-app:latest
 
     - name: Deploy to AKS
       uses: azure/aks-set-context@v1
